# tukey

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled5.ipynb  crop_yield_forecast-Copy1.ipynb  crop_yield_forecast-RNN.ipynb  crop_yield_forecast.ipynb  plot_pdf_tukey.py  simulation_study.ipynb
docs/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  crop_yield_forecast-checkpoint.ipynb
src/ocean/: dataaccess.py  datasets.py  main.py  modules.py  traineval.py
src/tukey/: losses.py  models.py  multimodal.py  transforms.py  utils.py
