[tool.poetry]
name = "tukey"
version = "0.1.0"
description = "Probabilistic loss functions for neural networks in Pytorch"
authors = ["arthur <ahw795@qmul.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.7.3"
paramiko = "^2.12.0"
matplotlib = "^3.6.2"
torch = "^2.0.0"
ipykernel = "^6.22.0"
pandas = "^1.5.3"
netcdf4 = "^1.6.4"
cartopy = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
